Use ProcessBuilder for calling pdftoxml in order to support file with space characters
and ProcessBuilder is better practice…